<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Q-cut</string>


    <!--server link-->
    <string name="link">https://quickcut.000webhostapp.com/</string>

    <string name="clientid">816405632093-e4kra1a2k53q3ocda988t9agic5evrgk</string>
    <string name="appid">68a2c498–a13b-4e8a-a131-862ece256277</string>

    <!--Facebook-->
    <string name="facebook_app_id">2039278182984090</string>
    <string name="fb_login_protocol_scheme">fb2039278182984090</string>

    <string name="providerid" ></string>

    <!-- ads detail -->
    <string name="insertial_ad_key">ca-app-pub-3730886167471578/1104021244</string>
    <string name="banner_ad_key">ca-app-pub-6257913950558441/3422902017</string>
    <string name="bannerads">no</string>
    <string name="insertialads">no</string>

    <string name="hello_world">Hello world!</string>
    <string name="progress_dialog">Loading</string>
    <string name="internet_error">Internet is not working.</string>

    <!-- Home Activity -->
    <string name="title_activity_main">Home</string>
    <string name="search_hint">Search By Name</string>
    <string name="btn_loadmore">Load More</string>
    <string name="error_dialog_text">Sorry,We could not find more data.</string>
    <string name="btn_home">Home</string>
    <string name="btn_category">Category</string>
    <string name="btn_favourite">Favourite</string>
    <string name="btn_featured">Featured</string>
    <string name="btn_news">News</string>
    <string name="btn_addstore">Add Store</string>
    <string name="btn_aboutus">About Us</string>
    <string name="btn_termscondition">Terms &amp; Condition</string>
    <string name="btn_login">Login</string>
    <string name="btn_review">Review</string>
    <string name="btn_gmap">Map</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_register">Register</string>

    <!-- Category -->
    <string name="title_activity_category">Category</string>

    <!-- Favorites -->
    <string name="title_activity_favourite">Favourite</string>
    <string name="error_fav_not_found">No Favourites Found</string>
    <string name="km_sufix">Km</string>

    <!-- Featured -->
    <string name="title_activity_featured">Featured</string>

    <!-- News -->
    <string name="title_activity_news">News</string>

    <!-- Add Store -->
    <string name="title_activity_addstore">Add Store</string>

    <!-- About us -->
    <string name="title_activity_about">About Us</string>
    <string name="aboutparagraph1">Q-cut is a mobile application that unites barbershops and potential barbershop customers."</string>
    <string name="aboutparagraph2">We ensure that the customer has all the details about the barbershop options."</string>
    <string name="aboutparagraph3">This platform could provide barbershops with a much larger client base than they have beeen exposed to before. "</string>
    <string name="aboutparagraph4">Your satisfaction is our happiness."</string>

    <!-- Terms and Conditions -->
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="termparagraph1"> Unavailable at the moment"</string>


    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="or_text">OR</string>
    <string name="hint_usermailid">User Name</string>
    <string name="hint_Password">Password</string>
    <string name="btn_login1">Login</string>
    <string name="btn_register1">Register</string>

    <!-- Register -->
    <string name="title_activity_register">Register</string>
    <string name="txt_edit">Edit</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_register2">Register</string>
    <string name="error_duplicate_email">This email id or username is already exists.. try another new email id or username for registration</string>

    <!-- Review -->
    <string name="title_activity_review">Review</string>
    <string name="dialog_description">Thank you for your feedback</string>
    <string name="dialog_title">Thanks</string>
    <string name="error_required_registration">You have to Register to add Review..</string>
    <string name="error_required_registrationstore">You have to Register to add Store..</string>
    <string name="error_add_review">Be the first one to add review..</string>

    <!-- Map -->
    <string name="title_activity_gmap">Map</string>

    <!-- Profile -->
    <string name="title_activity_profile">Profile</string>

    <!-- Splash -->
    <string name="title_activity_splash">Splash</string>

    <!-- Detail Page -->
    <string name="title_activity_detailpage">Detail Page</string>
    <string name="txt_availableat">Available At</string>
    <string name="txt_totoal_review">total review</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="pref_about_application">ABOUT APPLICATION</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_version">Version</string>
    <string name="pref_about_developer">ABOUT DEVELOPER</string>
    <string name="app_recipient">admin@redixbit.com</string>
    <string name="pref_contact_app">Contact Us</string>
    <string name="pref_contact_app_summary">For more information contact us.</string>
    <string name="app_subject">Restaurant</string>
    <string name="email_no_client">No email client installed.</string>
    <string name="share">Share</string>
    <string name="sharetitle">Share store information with</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email_choose_from_client">Choose an email client from...</string>

    <!--<string name="link">http://app.worldbazaar.biz/</string>-->
    <!--<string name="link">http://www.administrator.popinonline.com/</string>-->
    <string name="title_activity_addstorenew">Addstorenew</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_custom_photo_gallery">CustomPhotoGalleryActivity</string>

    <!-- internet check -->
    <string name="internet">Internet Connection Error</string>
    <string name="internettext">Please connect to working Internet connection</string>
    <!--<string name="facebook_app_id">2039278182984090</string>-->
    <string name="ok">ok</string>

</resources>