<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <!-- <RelativeLayout
         android:id="@+id/nav_header_container"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary">

         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/ic_profile"
             android:scaleType="fitCenter"
             android:layout_centerInParent="true" />

     </RelativeLayout>


     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawerList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/nav_header_container"
         android:layout_marginTop="15dp" />
 -->
    <RelativeLayout
        android:id="@+id/rel_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:focusable="true">


        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/sidebar_bg"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/ll_profile"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp">

                <freaktemplate.utils.RoundedImageView
                    android:id="@+id/img_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/sidebar_profile" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/img_profile"
                    android:background="#2E2E2E"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/img_profile">

                    <TextView
                        android:id="@+id/txt_nameuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="Sign in"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txt_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_nameuser"
                        android:text="Profile"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/home"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/txt_avail"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_home"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cat"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/category"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_category"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_fav"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/favourite"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_favourite"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_featured"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/featured"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_featured"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_news"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/news"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_news"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--
            <LinearLayout
                android:id="@+id/ll_weather"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/weather"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Weather"
                    android:textColor="#fff" />
            </LinearLayout>
            -->

            <LinearLayout
                android:id="@+id/ll_AddStore"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/addstore"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_AddStore"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/txt_AddStore"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_addstore"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/aboutus"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_aboutus"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/terms"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_termscondition"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:id="@+id/ll_login"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="45dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:background="@drawable/login"-->
                <!--android:gravity="center_vertical">-->

                <!--<ImageView-->
                    <!--android:layout_width="25dp"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:contentDescription="TODO" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="fill_parent"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginLeft="32dp"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:text="@string/btn_login"-->
                    <!--android:textColor="#fff"-->
                    <!--android:textSize="15sp" />-->
            <!--</LinearLayout>-->

            <!--
            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/register"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Register"
                    android:textColor="#fff" />
            </LinearLayout>
            -->

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>